--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" media="mediatype and|not|only (expressions)" href="style/index.css">
   <title>Sprint Challenge - Home</title>
 
   <link href="https://fonts.googleapis.com/css?family=Roboto|Rubik" rel="stylesheet">
@@ -12,8 +13,18 @@
 </head>
 
 <body>
+    <header>
+        <img src = "assets/lambda-black.png"/>
+        <nav>
+            <a href = "">Home</a>
+            <a href = "about.html">About</a>
+            <a href = "">Products</a>
+            <a href = "">Blog</a>
+            <a href = "">Contact</a>
+        </nav>
+    </header>
     <div class="container">
-   
+        <img id = "banner" src = "assets/jumbo.jpg"/>
         <section class="top-content">
             <div class="text-container">
                 <h2>The Future</h2>
