--- a/index.html
+++ b/index.html
@@ -41,16 +41,16 @@
             <h2>Why Did It Have To Be Boxes...</h2>
             
             <div class="boxes">
-                <div class="box">Box 1</div>
-                <div class="box">Box 2</div>
-                <div class="box">Box 3</div>
-                <div class="box">Box 4</div>
-                <div class="box">Box 5</div>
-                <div class="box">Box 6</div>
-                <div class="box">Box 7</div>
-                <div class="box">Box 8</div>
-                <div class="box">Box 9</div>
-                <div class="box">Box 10</div>
+                <div id = "boxOne" class="box">Box 1</div>
+                <div id = "boxTwo" class="box">Box 2</div>
+                <div id = "boxThree" class="box">Box 3</div>
+                <div id = "boxFour" class="box">Box 4</div>
+                <div id = "boxFive" class="box">Box 5</div>
+                <div id = "boxSix" class="box">Box 6</div>
+                <div id = "boxSeven" class="box">Box 7</div>
+                <div id = "boxEight" class="box">Box 8</div>
+                <div id = "boxNine" class="box">Box 9</div>
+                <div id = "boxTen" class="box">Box 10</div>
             </div>
         
         </section>
